Opened 17 years ago

Closed 6 years ago

Last modified 5 years ago

#2629 closed bug (fixed)

Automatic disk mounting not working.

Reported by: bga Owned by: nobody
Priority: normal Milestone: R1/beta2
Component: Applications/Tracker Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: #1052 Blocking:
Platform: All

Description

CDs are not being auto-mounted by Tracker even when Automatic Disk Mounting is set to all disks. Tried with a BFS cd, a ISO9660 CD and an Audio CD (cdda-fs).

Change History (18)

comment:1 by axeld, 16 years ago

What revision was this, and is it still reproducible? (for reference, it works fine over here)

comment:2 by axeld, 16 years ago

Correction: I misunderstood the ticket, auto-mounting during boot works fine, when Tracker is running already, not so much anymore (hrev28350).

comment:3 by axeld, 16 years ago

Blocked By: 1052 added

This is also not very surprising, though (#1052).

comment:4 by bga, 16 years ago

Yes, looks like #1052 is the problem *BUT*:

I have thos ext2 partition (ext3, actually). I boot Haiku and mount it. Mount settings is mount previously mounted volumes. Reboot. Partition is not auto mounted.

It seems it works for BFS partitions but not for ext2 partitions for some reason (and yes, this is a different bug it seems, but I thought I would mention it).

comment:5 by axeld, 16 years ago

Resolution: fixed
Status: newclosed

I don't have an ext2 partition handy on my test system, but since it works fine there with ReiserFS, it shouldn't be a general issue.

Anyway, as of hrev29585 Tracker now auto-mounts CDs and USB devices as it should.

comment:6 by bga, 16 years ago

Resolution: fixed
Status: closedreopened

I am reopening this as this still does not work for me. It works for removable media but not for built in devices. If you prefer you can close this again and I will create a different bug for the specific case of HDs. Here is some more data:

[/boot/home]> mountvolume -lh   
Volume         File System              Size Mounted At (Device)
---------------------------------------------------------------------
               Intel Partition Map    465.8G   (ata/1/slave/raw)
               <unknown>              465.8G   (ata/1/slave/0)
               <unknown>                   0   (atapi/1/master/raw)
               Intel Partition Map    232.9G   (scsi/0/1/0/raw)
               <unknown>              140.0G   (scsi/0/1/0/0)
<unnamed>      Ext2 File System        14.0G   (scsi/0/1/0/1)
               <unknown>                1.9G   (scsi/0/1/0/2)
               Intel Extended          77.0G   (scsi/0/1/0/3)
Haiku          Be File System          38.5G /boot  (scsi/0/1/0/3_0)
Haiku          Be File System          38.5G   (scsi/0/1/0/3_1)
               Intel Partition Map    111.8G   (scsi/0/2/0/raw)
Zeta 1.2       Be File System           9.8G   (scsi/0/2/0/0)
Zeta 1.5       Be File System           4.9G   (scsi/0/2/0/1)
Data           Be File System          77.0G   (scsi/0/2/0/2)
no name        FAT32 File System       20.1G   (scsi/0/2/0/3)

If I mount the "<unnamed>" ext2 partition or the "no name" FAT32 partition and reboot, they will not be mounted even with Tracker set to mount previously mounted disks.

comment:7 by mmadia, 16 years ago

I can confirm this with ext2. tested with gcc2-hrev29476. "previously mounted disks" was selected. My ext2 partition is also a primary partition on a drive with an extended partition.

comment:8 by stippi, 16 years ago

I think it should be a separate ticket, but for the record, mounting previously mounted disks is working with my systems since ages. Could it be something ext2 specific? For me it works with BFS disks (read-only<->read/write status is restored also) and ReiserFS.

comment:9 by axeld, 16 years ago

I would have preferred a new bug, but since we're already here... :-) The original bug description is somewhat vague anyway, so it probably still fits, and might even have had similar reasons (beyond the missing notifications).

As I said, it works fine over here; I will see that I get an ext2/FAT drive in my computer to see if I can reproduce it.

comment:10 by bga, 16 years ago

Yes, with BFS it does work here too, but not with FAT or EXT2. I do not have any ReiserFS partitions to check. Anyway, I would expect this to be more generic and not FS dependent so I am pretty sure there is a bug somewhere.

comment:11 by bga, 16 years ago

Did some more tests. it seems to work for some file systems and not for others and this does not seem to make much sense. In any case, it works with NTFS and BFS (of course), but not with fat or ext2 partitions.

comment:12 by stippi, 16 years ago

This may be fixed in hrev30720. The automounter was using the wrong mount mode for removable media during the initial scan. I am not quite sure if your specific case is what I fixed along the way by fixing a couple of other problems, but please re-test in any case.

comment:13 by axeld, 16 years ago

I can still reproduce it here - I found a system of mine that still has an ext2 partition :-)

comment:14 by pulkomandy, 10 years ago

Is this still valid?

comment:15 by axeld, 8 years ago

Owner: changed from axeld to nobody
Status: reopenedassigned

comment:16 by cocobean, 7 years ago

@Bruno - With hrev52025 x86_64, I tested this for another ticket and I have normally working automounts for either audio/data CDs and NTFS/exFAT/FAT USB drives. So from the original purpose of this ticket, I'd say the ticket is resolved on my end for CD/DVD auto mounting.

NOTE: Need to review any issues with mounting ext2/ext3 drives.

Last edited 7 years ago by cocobean (previous) (diff)

comment:17 by waddlesplash, 6 years ago

Resolution: fixed
Status: assignedclosed

comment:18 by nielx, 5 years ago

Milestone: R1R1/beta2

Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone

Note: See TracTickets for help on using tickets.