* Auto mounting now works correctly for CDs and USB sticks, thus fixing bug   #2629.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@29585 a95241bf-73f2-0310-859d-f6bbb57e9c96